# variantkey

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  dockerbuild.sh
c/: CMakeLists.txt  Makefile  annotated.html  annotated_dup.js  binsearch_8h.html  binsearch_8h.js  binsearch_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95f36bb7017c611e74b72485a3bf1179.html  esid_8h.html  esid_8h.js  esid_8h_source.html  files.html  files.js  functions.html  functions_vars.html  genoref_8h.html  genoref_8h.js  genoref_8h_source.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_dup.js  globals_e.html  globals_f.html  globals_func.html  globals_func.js  globals_func_b.html  globals_func_c.html  globals_func_d.html  globals_func_e.html  globals_func_f.html  globals_func_g.html  globals_func_h.html  globals_func_i.html  globals_func_m.html  globals_func_n.html  (+56 more)
c/doc/: CMakeLists.txt  Doxyfile
c/resources/debian/: changelog  control  copyright  rules
c/resources/rpm/: rpm.spec
c/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+36 more)
c/src/: CMakeLists.txt  astring.c  astring.h  binsearch.c  binsearch.h  esid.c  esid.h  genoref.c  genoref.h  hex.c  hex.h  nrvk.c  nrvk.h  regionkey.c  regionkey.h  rsidvar.c  rsidvar.h  variantkey.c  variantkey.h
c/src/variantkey/: CMakeLists.txt  binsearch.h  esid.h  genoref.h  hex.h  nrvk.h  regionkey.h  rsidvar.h  set.h  variantkey.h
c/test/: CMakeLists.txt  example.c  test_astring.c  test_binsearch.c  test_binsearch_col.c  test_binsearch_file.c  test_esid.c  test_example.c  test_genoref.c  test_hex.c  test_nrvk.c  test_regionkey.c  test_rsidvar.c  test_set.c  test_variantkey.c
c/test/data/: genoref.fa  rsvk.10.hex  rsvk.m.10.hex  rsvk.sorted.10.hex  rsvk.sorted.m.10.hex  rsvk.unsorted.10.hex  rsvk.unsorted.m.10.hex  test_data.hex  test_data_binsrc.hex  test_data_col.hex  vknr.10.hex  vknr.10.unsorted.hex  vknr.10.unsorted.tsv  vkrs.10.hex  vkrs.sorted.10.hex  vkrs.unsorted.10.hex
c/test/rsidvar_bench/: CMakeLists.txt  rsidvar_bench.c
c/vk/: CMakeLists.txt  vk.c
cgo/src/: binsearch_test.go  farmhash64_test.go  main_test.go  rsidvar_test.go  varianthash.go  varianthash_test.go  variantkey.go  variantkey_test.go
cmd/: CMakeLists.txt  vk.c
conda/: bld.bat  build.sh  channels.mk  meta.yaml  run_test.sh  setup-conda.sh
conda/c.src/: build.sh  meta.yaml
conda/c.vk/: build.sh  meta.yaml
conda/dev/: build.sh  meta.yaml
conda/python/: meta.yaml  run_test.sh
conda/python-class/: build.sh  meta.yaml  run_test.sh
conda/r/: build.sh  meta.yaml  run_test.sh
conda/vk/: build.sh  meta.yaml
doc/: Doxyfile
docker/dev/: Dockerfile
docker/scripts/: install-common.sh  install-python-pyvariantkey.sh  install-python-variantkey.sh
go/: .gitignore  Makefile  index.html
go/example/: main.go
go/src/: binsearch.go  binsearch_col_test.go  binsearch_test.go  esid_test.go  farmhash64.go  farmhash64_test.go  genoref_test.go  main_test.go  nrvk_test.go  regionkey_test.go  rsidvar.go  rsidvar128.go  rsidvar_test.go  varianthash.go  varianthash_test.go  variantkey.go  variantkey_test.go
javascript/: Makefile
javascript/src/: variantkey.js
javascript/test/: test_esid.js  test_regionkey.js  test_variantkey.js
js/src/: variantkey.js
js/test/: index.html  test_variantkey.js
python/: .gitignore  MANIFEST.in  Makefile  setup.py  variantkey.html
python-class/: .gitignore  MANIFEST.in  Makefile  pyvariantkey.variantkey.html  setup.py
python-class/pyvariantkey/: pyvariantkey.py  variantkey.py
python-class/test/: example.py  test_esid.py  test_file_errors.py  test_genoref.py  test_nrvk.py  test_pyvariantkey.py  test_regionkey.py  test_rsidvar.py  test_variantkey.py
python/src/: pyvarianthash.c  pyvarianthash.h  pyvariantkey.c  pyvariantkey.h
python/test/: example.py  test_binsearch.py  test_binsearch_col.py  test_binsearch_file.py  test_esid.py  test_genoref.py  test_nrvk.py  test_regionkey.py  test_rsidvar.py  test_variantkey.py
python/tests/: example.py  test_binsearch.py  test_farmhash64.py  test_rsidvar.py  test_rsidvar.py.tmp  test_rsidvar128.py  test_rsidvar64.py  test_varianthash.py  test_variantkey.py
python/variantkey/: pyvariantkey.c  pyvariantkey.h
r/: .gitignore  Makefile  authors.html  document.R  index.html
r/example/: example.R
r/reference/: AreOverlappingRegionKeys.html  AreOverlappingRegionRegionKey.html  AreOverlappingRegions.html  AreOverlappingVariantKeyRegionKey.html  CheckReference.html  CloseVariantKey.html  CompareVariantKeyChrom.html  CompareVariantKeyChromPos.html  DecodeChrom.html  DecodeRefAlt.html  DecodeRegionKey.html  DecodeRegionStrand.html  DecodeStringID.html  DecodeVariantKey.html  EncodeChrom.html  EncodeRefAlt.html  EncodeRegionKey.html  EncodeRegionStrand.html  EncodeStringID.html  EncodeStringNumID.html  EncodeVariantKey.html  ExtendRegionKey.html  ExtractRegionKeyChrom.html  ExtractRegionKeyEndPos.html  (+88 more)
src/: CMakeLists.txt  binsearch.c  binsearch.h  farmhash64.c  farmhash64.h  rsidvar.c  rsidvar.h  rsidvar128.c  rsidvar128.h  rsidvar64.c  rsidvar64.h  uint128.h  varianthash.c  varianthash.h  variantkey.c  variantkey.h
test/: CMakeLists.txt  rsid_varhash128.10.hex  rsid_varhash64.10.hex  test_binsearch.c  test_farmhash64.c  test_rsidvar.c  test_rsidvar128.c  test_rsidvar64.c  test_varianthash.c  test_variantkey.c  varhash128_rsid.10.hex  varhash64_rsid.10.hex
test/data/: rsid_variantkey.10.hex  rsid_variantkey128.10.hex  rsid_variantkey64.10.hex  variantkey128_rsid.10.hex  variantkey64_rsid.10.hex  variantkey_rsid.10.hex
(+174 files in other folders)
