set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
set(RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/cmd)

# Add the binary tree directory to the search path for linking and include files
link_directories (${PROJECT_BINARY_DIR}/src)
include_directories (${CMAKE_CURRENT_BINARY_DIR} ${PROJECT_BINARY_DIR}/src)

file (COPY DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable (vk vk.c)
target_link_libraries (vk variantkey)

# --- PACKAGING ---
INSTALL(TARGETS vk DESTINATION bin)
set(CPACK_GENERATOR "DEB;RPM;TGZ")
set(CPACK_PACKAGE_NAME "vk")
set(CPACK_PACKAGE_VENDOR "GENOMICS plc")
set(CPACK_PACKAGE_CONTACT "info@genomicsplc.com")
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "VariantKey Fast Encoder Command Line Application")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "/usr/local/bin")
set(CPACK_PACKAGE_CHECKSUM "SHA512")
INCLUDE(CPack)
